--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ohil17yo36.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: ohileshwaritagi
+github_username:  ohil17yo36
 
 # Build settings
 markdown: kramdown
