--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Ohil's learnings
+email: ohileshwar17@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  All the tech content I have learned so far in my life is documented here.
+  Sit tight, It's going to be a hell of a ride !!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ohil17yo36.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ohileshwaritagi
